# foofox

./: BUILD.md  CMakeLists.txt  CMakePresets.json  vcpkg.json
.github/workflows/: build-windows.yml
cmake/: DeployQt.cmake  FooyinPackaging.cmake
include/gui/widgets/: singletabbedwidget.h
src/app/: commandline.cpp
src/core/: CMakeLists.txt
src/core/engine/: audiobuffer.cpp  taglibparser.cpp
src/core/engine/ffmpeg/: ffmpeginput.cpp
src/gui/: CMakeLists.txt
src/plugins/: CMakeLists.txt
src/plugins/libarchive/: libarchiveinput.cpp
src/plugins/openmpt/: openmptinput.cpp
src/plugins/sdl/: sdloutput.cpp
